full list of suppliers is accessible

--- a/php/src/application/pages/PMO.phtml
+++ b/php/src/application/pages/PMO.phtml
@@ -17,5 +17,7 @@
 <h1>Project Management Office (PMO)</h1>
 
 <?=$this->bar()
+    ->setStyle('stairs')
     ->addLink('Suppliers', 'Database of Suppliers')
+    ->addLink('StaffRequests', 'Staff Requests and Responses')
     ?>
