--- a/php/src/application/pages/PMO/Suppliers.phtml
+++ b/php/src/application/pages/PMO/Suppliers.phtml
@@ -16,59 +16,21 @@
  
 <?=$this->publish($this->root->supplierRegistry)?>
 
-<? $this->includeCSS('pages/PMO/Suppliers.css') ?>
-
-<h1>Staff Requests for Suppliers</h1>
+<h1>Full List of Suppliers</h1>
 
 <?=$this->table()
-    ->setSource($this->root->projectRegistry->getStaffRequests())
-    ->addColumn('project', 'Project')
-    ->addColumn('role', 'Role')
-    ->addColumn('skillsHtml', 'Skills required')
-    ->addColumn('duration', 'Days')
-    ->addColumn('cost', 'Cost')
-    ->addColumn('threshold', 'Threshold')
-    ->addColumn('response', 'Response')
-    
-    ->addOption('response', 'requests/{id}')
-    ?>
-
-<!--
-    
-    $tags = array();
-    foreach ($this->registry->wanted as $wanted) {
-        $color = hexdec(substr(Model_Colors::BLUE, 1));
-        $delta = (1 - $wanted->have / $wanted->required) * 0x2F;
-        $color = $color + 0x010000 * $delta + 0x000100 * $delta + $delta;
-        $color = sprintf('#%06x', $color);
-        $tags[] = new Zend_Tag_Item(array(
-            'title' => "<span style='color: {$color};'>" . str_replace(' ', '&nbsp;', $wanted->role) . '</span>',
-            'weight' => $wanted->required,
-            'url' => $this->link('byRole/' . $wanted->role),
-            ));
-    }
-        
-    echo new Zend_Tag_Cloud(array(
-        'tags' => $tags,
-        'cloudDecorator' => array(
-            'decorator' => 'htmlCloud',
-            'options' => array(
-                'separator' => '',
-                'htmlTags' => array(
-                    'ul' => array(
-                        'class' => 'cloud'
-                    )
-                )
-            )
-        ),
-        'tagDecorator' => array(
-            'decorator' => 'htmlTag',
-            'options' => array(
-                'fontSizeUnit' => 'em',
-                'minFontSize' => 2,
-                'maxFontSize' => 4
-            )
+    ->setSource($this->root->supplierRegistry)
+    ->addColumn('email', 'Email')
+    ->addColumn('name', 'Full name')
+    ->addColumn('skills', 'Skills')
+        ->addConverter(
+            'callback', 
+            create_function('$a', 'return implode(", ", $a);')
         )
-    ));
-
--->
+    ->addColumn('roles', 'Roles')
+        ->addConverter(
+            'callback', 
+            create_function('$a', 'return implode(", ", $a);')
+        )
+    ->addColumn('rate', 'Rate')
+    ?>
