--- a/php/src/application/views/scripts/css/helper/tree.css
+++ b/php/src/application/views/scripts/css/helper/tree.css
@@ -18,17 +18,14 @@
 
 div.tree {
     margin-top: 20px;
-    margin-left: -20px;
 }
 
     div.tree span,
     div.tree div {
-        margin-left: 20px;
     }
         
     div.tree span {
         cursor: pointer;
-        display: inline-block;
         color: <?=Model_Colors::BLUE?>;
     }
 
@@ -37,6 +34,7 @@ div.tree {
             color: white;
         }
         
-    div.tree div {
+    div.tree div.sub {
+        margin-left: 20px;
     }
 
