renderSections introduced in Tree

--- a/php/src/application/pages/projects/_any/Scope/SRS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS.phtml
@@ -29,6 +29,11 @@
 
 <?=$this->tree()
     ->setCollection($this->project->deliverables->functional, 'name', '.')
+    ->setOptions(
+        array(
+            'renderSections' => false,
+        )
+    )
     ->addAttrib('class', 'tree')
     ->setMask('%s: %s')
     ->addToken('->name')
