--- a/php/src/application/views/scripts/css/pages/projects/_any/Scope/SRS/tree.css
+++ b/php/src/application/views/scripts/css/pages/projects/_any/Scope/SRS/tree.css
@@ -12,7 +12,7 @@
  * tel. +1 (239) 935 5429
  *
  * @copyright Copyright (c) TechnoPark Corp., 2001-2009
- * @version $Id$
+ * @version $Id: tree.css 611 2010-02-07 07:43:45Z yegor256@yahoo.com $
  *
  */
 
