Design model start collapsed

--- a/php/src/application/pages/projects/_any/Scope/DesignModel.phtml
+++ b/php/src/application/pages/projects/_any/Scope/DesignModel.phtml
@@ -32,6 +32,7 @@
     ->setOptions(
         array(
             'renderSections' => false,
+            'startCollapsed' => true,
         )
     )
     ->addAttrib('class', 'tree')
