coverage page intro

--- a/php/src/application/pages/projects/_any/Scope.phtml
+++ b/php/src/application/pages/projects/_any/Scope.phtml
@@ -12,6 +12,7 @@
  * 568 Ninth Street South 202, Naples, Florida 34102, USA
  * tel. +1 (239) 935 5429
  *
+ * @version $Id$
 -->
  
 <h1>Scope Management</h1>
@@ -22,4 +23,5 @@
     ->addLink('SRS', 'Software Requirements Specification (SRS)')
     ->addLink('DesignModel', 'Design Model')
     ->addLink('Traceability', 'Traceability Matrix')
+    ->addLink('Coverage', 'Coverage')
     ?>
