--- a/php/src/application/pages/projects/_any/Scope/Coverage.phtml
+++ b/php/src/application/pages/projects/_any/Scope/Coverage.phtml
@@ -47,8 +47,10 @@
         $to = $this->post('to');
         
         $deliverables = $this->project->deliverables->$to;
+        $source = $this->project->deliverables->$from;
+        
         foreach ($deliverables as $deliverable) {
-            $coverage = $this->project->traceability->getCoverage($from, $deliverable);
+            $coverage = $this->project->traceability->getCoverage($source, $deliverable);
             echo sprintf(
                 "<span%s>%s</span>\n",
                 $coverage > 0 ? ' class="covered"' : false,
