show approvedOn column

--- a/php/src/application/pages/PMO/Suppliers.phtml
+++ b/php/src/application/pages/PMO/Suppliers.phtml
@@ -33,4 +33,5 @@
             create_function('$a', 'return implode(", ", $a);')
         )
     ->addColumn('rate', 'Rate')
+    ->addColumn('approvedOn', 'Approved On')
     ?>
