--- a/php/src/application/pages/PMO/Reports/_any.phtml
+++ b/php/src/application/pages/PMO/Reports/_any.phtml
@@ -40,7 +40,7 @@
     ->addColumn('paid', 'Paid')
     ?>
     
-<p>They totally earned <?=$earned?>, PMO bonus: <b><?=$earned->div(10)?></b></p>
+<p>They totally earned <?=$earned?>, PMO bonus: <?=$earned->div(10)?></p>
 
 <p>Suppliers approved during the reporting period:</p>
 
@@ -70,4 +70,7 @@
         )
     ?>
 
-<p>PMO bonus: <b><?=$pmoBonus?></b></p>
+<p>PMO bonus: <?=$pmoBonus?></p>
+
+<p>Total PMO bonus for the period: 
+    <b><?=$pmoBonus->add($earned)?></b></p>
