a bit of layout

--- a/php/src/application/pages/PMO/Reports/_any.phtml
+++ b/php/src/application/pages/PMO/Reports/_any.phtml
@@ -28,7 +28,7 @@
 <?=$this->bar()?>
  
 <h1>Performance Report for 
-    <?=$start->get(Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR)?></h1>
+    "<?=$start->get(Zend_Date::MONTH_NAME . ' ' . Zend_Date::YEAR)?>"</h1>
 
 <p>Suppliers' results:</p>
 <?=$this->table()
