migrated to FaZend_Callback

--- a/php/src/application/pages/projects/_any/Integration/Metrics.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Metrics.phtml
@@ -46,7 +46,7 @@
     ->addToken('->suffix')
     ->addToken('->value')
     ->addToken('->default')
-    ->addToken('->target')
+    ->addToken('->objective')
     ->addToken('->delta')
     ?>
 
