--- a/php/src/application/pages/projects/_any/Integration/Metrics/set/_any.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Metrics/set/_any.phtml
@@ -21,7 +21,7 @@
 <?=$this->forma()
     ->addField('text', 'target')
         ->fieldLabel('Current target:')
-        ->fieldValue($metric->target)
+        ->fieldValue($metric->objective)
         ->fieldRequired(true)
         ->fieldAttrib('maxlength', 10)
         ->fieldAttrib('size', 5)
