FaZend_Callback fully integrated

--- a/php/src/application/pages/Finance/Cash/Statements/_any/email.phtml
+++ b/php/src/application/pages/Finance/Cash/Statements/_any/email.phtml
@@ -30,7 +30,7 @@
     
     ->addField('submit')
         ->fieldAttrib('class', 'btn')
-        ->fieldAction($statement, 'sendByEmail')
+        ->fieldAction(array($statement, 'sendByEmail'))
     ?>
    
 <pre> 
