--- a/php/src/application/pages/Finance/Cash/Statements/create.phtml
+++ b/php/src/application/pages/Finance/Cash/Statements/create.phtml
@@ -51,6 +51,6 @@
 
     ->addField('submit')
         ->fieldAttrib('class', 'btn')
-        ->fieldAction('thePayment', 'create')
+        ->fieldAction(array('thePayment', 'create'))
     ?>
     
