--- a/php/src/application/pages/projects/_any/Cost/Payments/generic.phtml
+++ b/php/src/application/pages/projects/_any/Cost/Payments/generic.phtml
@@ -34,5 +34,5 @@
         ->fieldValue($this->project->name)
         
     ->addField('submit')
-        ->fieldAction($this->project->payments, 'createGeneric')
+        ->fieldAction(array($this->project->payments, 'createGeneric'))
     ?>
