--- a/php/src/application/pages/Sales.phtml
+++ b/php/src/application/pages/Sales.phtml
@@ -12,7 +12,12 @@
  * 568 Ninth Street South 202, Naples, Florida 34102, USA
  * tel. +1 (239) 935 5429
  *
+ * @version $Id$
 -->
  
 <h1>Sales</h1>
 
+<?=$this->bar()
+    ->setStyle('stairs')
+    ->addLink('Opportunities', 'Sales Opportunities')
+    ?>
