--- a/php/src/application/pages/Sales/Opportunities.phtml
+++ b/php/src/application/pages/Sales/Opportunities.phtml
@@ -15,19 +15,12 @@
  * @version $Id$
 -->
  
-<?=$this->publish($this->root->supplierRegistry)?>
+<?=$this->publish($this->root->opportunityRegistry)?>
 
-<h1>Full List of Suppliers</h1>
+<h1>Sales Opportunities</h1>
 
 <?=$this->table()
-    ->setSource($this->root->supplierRegistry)
-    ->addColumn('email', 'Email')
-    ->addColumn('name', 'Full name')
-    ->addColumn('skills', 'Skills')
-        ->addConverter('implode(", ", ${a1});')
-    ->addColumn('roles', 'Roles')
-        ->addConverter('implode(", ", ${a1});')
-    ->addColumn('rate', 'Rate')
-    ->addColumn('approvedOn', 'Approved On')
-        ->addConverter('${a1}->get(Zend_Date::DATE_MEDIUM)')
+    ->setSource($this->root->opportunityRegistry)
+    ->addColumn('id', 'Id')
+    ->addOption('id', '{id}')
     ?>
