more TeX content (ROM, Offer, etc.)

--- a/php/src/application/pages/Sales/Opportunities/_any.phtml
+++ b/php/src/application/pages/Sales/Opportunities/_any.phtml
@@ -34,3 +34,5 @@
         ->fieldAttrib('class', 'btn')
         ->fieldAction(array($opp, 'sendByEmail'))
     ?>
+
+<pre class="log"><?=$opp->sheets->dump()?></pre>
