some tests reorganized

--- a/php/src/application/pages/Sales/Opportunities/_any.phtml
+++ b/php/src/application/pages/Sales/Opportunities/_any.phtml
@@ -35,4 +35,4 @@
         ->fieldAction(array($opp, 'sendByEmail'))
     ?>
 
-<pre class="log"><?=$opp->sheets->dump()?></pre>
+<pre class="log"><!-- ?=$opp->sheets->dump()? --></pre>
