fixes in opportunity management - now it should work

--- a/php/src/application/pages/Sales/Opportunities/_any.phtml
+++ b/php/src/application/pages/Sales/Opportunities/_any.phtml
@@ -35,4 +35,11 @@
         ->fieldAction(array($opp, 'sendByEmail'))
     ?>
 
-<pre class="log"><!-- ?=$opp->sheets->dump()? --></pre>
+<p>Structure of the document:</p>
+    
+<pre class="log"><?=$opp->sheets->dump()?></pre>
+
+<p>LaTeX source:</p>
+
+<pre class="log"><?=$opp->getLatex()?></pre>
+
