more or less effective sales offers formatting

--- a/php/src/application/pages/Sales/Opportunities/_any.phtml
+++ b/php/src/application/pages/Sales/Opportunities/_any.phtml
@@ -41,5 +41,5 @@
 
 <p>LaTeX source:</p>
 
-<pre class="log"><?=$opp->getLatex()?></pre>
+<textarea cols="100" rows="20"><?=$opp->getLatex()?></textarea>
 
