--- a/php/src/application/views/scripts/panel/publish/reload.phtml
+++ b/php/src/application/views/scripts/panel/publish/reload.phtml
@@ -19,8 +19,15 @@
     // start logging to memory
     FaZend_Log::getInstance()->addWriter('Memory', 'publish');
 
+    Zend_Db_Table::getDefaultAdapter()->beginTransaction();
+    
     // explicitly reload the document
     $this->document->reload();
+
+    // save all changes made to POS, if they were made
+    FaZend_Pos_Properties::saveAll();
+
+    Zend_Db_Table::getDefaultAdapter()->commit();
 
     // stop logging to memory
     $log = FaZend_Log::getInstance()->getWriterAndRemove('publish')->getLog();
