--- a/php/src/application/pages/projects/_any/Scope/SRS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/SRS.phtml
@@ -39,7 +39,10 @@
         )
     )
     ->addAttrib('class', 'tree')
-    ->setMask('<span class="node">%s</span>: %s')
-    ->addToken('->name')
-    ->addToken('->description')
+    ->setMask(
+        'sprintf(
+            "<span class=\'node\'>%s</span>: %s",
+            ${a1}->name,
+            ${a1}->description
+        )')
     ?>
