--- a/php/src/application/views/scripts/css/helper/table.css
+++ b/php/src/application/views/scripts/css/helper/table.css
@@ -19,10 +19,12 @@
 p.empty {
     background-color: <?=Model_Colors::BLUE?>;
     color: white;
-    padding: 2px;
+    padding: 0.2em;
 }
 
 table {
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
     /* table properties */
@@ -34,7 +36,7 @@ table {
     table th {
         text-align: left;
         vertical-align: top;
-        padding: 2px;
+        padding: 0.2em;
     }
 
     table th {
