all key WPs designed

--- a/php/src/application/pages/projects/_any/Scope/WBS.phtml
+++ b/php/src/application/pages/projects/_any/Scope/WBS.phtml
@@ -41,7 +41,7 @@
     ->addAttrib('class', 'tree')
     ->setMask(
         'sprintf(
-            "<tt>%s</tt>, %s, %s",
+            "<tt title=\'%s\'>%s</tt>: %s",
             ${a1}->code,
             ${a1}->cost,
             ${a1}->title
