minor fixes with objectives

--- a/php/src/application/pages/projects/_any/Integration/Objectives.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Objectives.phtml
@@ -36,6 +36,7 @@
         ->fieldAttrib('size', 5)
         ->fieldAttrib('maxlength', 5)
         ->fieldRequired(true)
+        ->fieldConverter('integer')
     ->addField('submit', 'submit')
         ->fieldValue('Set')
         ->fieldAttrib('class', 'btn')
