--- a/php/src/application/pages/Sales/Opportunities/_any.phtml
+++ b/php/src/application/pages/Sales/Opportunities/_any.phtml
@@ -26,9 +26,8 @@
     ->addBehavior('flash', '"Offer document sent to \'{${a1}}\'"')
     ->addBehavior('redirect')
     ->addField('text', 'email')
-        ->fieldLabel('Email')
+        ->fieldLabel('Email', true)
         ->fieldAttrib('size', 40)
-        ->fieldRequired(true)
     ->addField('submit', 'submit')
         ->fieldValue('Send')
         ->fieldAttrib('class', 'btn')
