--- a/php/src/application/pages/projects/_any/Cost/Payments/generic.phtml
+++ b/php/src/application/pages/projects/_any/Cost/Payments/generic.phtml
@@ -19,14 +19,12 @@
 <?=$this->forma()
 
     ->addField('text', 'original')
-        ->fieldLabel('Original amount')
-        ->fieldRequired()
+        ->fieldLabel('Original amount', true)
         ->fieldAttrib('maxlength', 10)
         ->fieldAttrib('size', 10)
         
     ->addField('textarea', 'details')
-        ->fieldLabel('Details of payment')
-        ->fieldRequired()
+        ->fieldLabel('Details of payment', true)
         ->fieldAttrib('cols', 40)
         ->fieldAttrib('rows', 5)
 
