--- a/php/src/application/pages/projects/_any/Integration/Metrics.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Metrics.phtml
@@ -25,9 +25,8 @@
     ->addBehavior('flash', '"Metric \'{${a1}}\' reloaded"')
     ->addBehavior('redirect')
     ->addField('text', 'name')
-        ->fieldLabel('Metric')
+        ->fieldLabel('Metric', true)
         ->fieldAttrib('size', 50)
-        ->fieldRequired(true)
     ->addField('submit', 'submit')
         ->fieldValue('Ping')
         ->fieldAttrib('class', 'btn')
