--- a/php/src/application/pages/projects/_any/Integration/Objectives.phtml
+++ b/php/src/application/pages/projects/_any/Integration/Objectives.phtml
@@ -24,18 +24,16 @@
     ->addBehavior('flash', '"Objective \'{${a1}->name}\' set to \'{${a2}}\'"')
     ->addBehavior('redirect')
     ->addField('text', 'a1')
-        ->fieldLabel('Objective')
+        ->fieldLabel('Objective', true)
         ->fieldAttrib('size', 40)
-        ->fieldRequired(true)
         ->fieldConverter(
             FaZend_Callback::factory('${i1}[${a1}]')
             ->inject($this->project->metrics)
         )
     ->addField('text', 'a2')
-        ->fieldLabel('Value')
+        ->fieldLabel('Value', true)
         ->fieldAttrib('size', 5)
         ->fieldAttrib('maxlength', 5)
-        ->fieldRequired(true)
         ->fieldConverter('integer')
     ->addField('submit', 'submit')
         ->fieldValue('Set')
