--- a/php/src/application/pages/Finance/Cash/Statements/_any.phtml
+++ b/php/src/application/pages/Finance/Cash/Statements/_any.phtml
@@ -25,7 +25,7 @@
 <?=$this->table()
     ->setSource($statement)
     ->addColumn('created', 'Date')
-    ->addColumn('usd', 'Amount')
+    ->addColumn('amount', 'Amount')
     ->addColumn('rate', 'Rate')
     ->addColumn('context', 'Context')
     ->addColumn('reason', 'Reason')
